# openvsh

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf52840dk_nrf52840_light_switch.overlay  nrf52840dk_nrf52840_on_off_light.overlay  openvsh_board0_on_off_light.overlay
boards/arm/openvsh_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  openvsh_nrf52840.dts  openvsh_nrf52840_defconfig  pre_dt_board.cmake
boards/openvsh/openvsh_board0/: Kconfig.defconfig  Kconfig.openvsh_board0  board.cmake  board.yml  openvsh_board0.dts
c-code/: bluetooth.c  bluetooth.h  button.h  relay.h  rgb.h  zigbee.c  zigbee.h
config/: light_switch.conf  on_off_light.conf
docs/: device-pinout.excalidraw  nrf52840-dk-j-link.excalidraw
include/: bluetooth.h  button.h  on_off_light.h  relay.h  rgb.h  zb_ha_on_off_light.h  zb_ha_on_off_light_switch.h  zb_ha_window_covering.h  zb_zcl_on_off_light_settings.h  zigbee.h
src/: bluetooth.c  bluetooth.h  button.c  button.cpp  button.h  event.h  macro.h  main.c  main.cpp  on_off_light.c  on_off_light.cpp  on_off_light.h  relay.h  rgb.c  rgb.cpp  rgb.h  rgb_old.c  rgb_old.h  zb_ha_on_off_light.h  zb_ha_range_extender.h  zb_zcl_on_off_light_settings.c  zigbee.c  zigbee.cpp  zigbee.h
src/ccode/: zigbee.h
zap-test/: zap-cli.c  zap-cluster-command-parser.c  zap-cluster-command-parser.h  zap-command.h  zap-config.h  zap-enabled-incoming-commands.h  zap-event.c  zap-event.h  zap-print.h  zap-type.h
